# dydactic

./: README.md  pyproject.toml
dydactic/: __init__.py  async_validate.py  cast.py  export.py  hooks.py  options.py  record.py  result.py  rules.py  schema.py  stats.py  transform.py  validate.py
tests/: conftest.py  test_cast.py  test_dicts.py  test_edge_cases.py  test_options.py  test_validate.py
