[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dydactic"
version = "0.1.2"
description = "Validate iterables using Pydantic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.9.2",
    "python-dateutil"
]
license = {text = "MIT License"}
keywords = ["iterable", "validation", "iterator", "model"]

[tool.setuptools.packages]
find = {}